...
    
    func updateButtonTitle() {
        if readMoreIsEnabled {
            readMoreButton.setAttributedTitle(NSAttributedString(string: "Show Less".localized(), attributes: [.font: TextFontStyle.style16.font, .foregroundColor: UIColor.darkBlue]), for: .normal)
            readMoreButton.setAttributedTitle(NSAttributedString(string: "Show Less".localized(), attributes: [.font: TextFontStyle.style16.font, .foregroundColor: UIColor.lightBlue]), for: .highlighted)
        } else {
            readMoreButton.setAttributedTitle(NSAttributedString(string: "Show More".localized(), attributes: [.font: TextFontStyle.style16.font, .foregroundColor: UIColor.darkBlue]), for: .normal)
            readMoreButton.setAttributedTitle(NSAttributedString(string: "Show More".localized(), attributes: [.font: TextFontStyle.style16.font, .foregroundColor: UIColor.lightBlue]), for: .highlighted)
        }
    }

    static func nib() -> UINib {
        return UINib(nibName: identifier, bundle: nil)
...
