...
"LinkCopied" = "Link copied";
"CopyLink" = "Copy";
"ManageLink" = "Manage";
"Revoke" = "Revoke";
"Link" = "Link";
"Save" = "Save";
"Done" = "Done";
"SharePreview" = "Share preview";
"MaxNumberUses" = "Max numbers of uses";
"ExpirationDate" = "Expiration date";
"Optional" = "Optional";
"AutoApprove" = "Auto approve";
"NoSharesMessage" = "This item is not shared with any archives";
...
